<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#000000">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#000000"
        android:elevation="4dp"
        android:title="@string/app_name"
        android:titleTextColor="@android:color/white"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />


    <TextView
        android:id="@+id/tvPeopleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_people"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <SearchView
        android:id="@+id/personSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_people_hint"
        android:iconifiedByDefault="false"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/personRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
